--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.10.1",
     "sql.js": "^1.13.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
