Replace sql.js with drizzle + sqlite

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "transpile:electron": "tsc --project src/electron/tsconfig.json",
+    "transpile:electron": "tsc --project src/electron/tsconfig.json && node scripts/copy-migrations.js",
     "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64",
     "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64",
-    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
+    "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64",
+    "postinstall": "electron-rebuild"
   },
   "author": "Galo Durante",
   "dependencies": {
@@ -29,10 +30,12 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.17",
+    "better-sqlite3": "^12.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.556.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
@@ -41,21 +44,22 @@
     "react-hook-form": "^7.68.0",
     "react-router": "^7.10.1",
     "sonner": "^2.0.7",
-    "sql.js": "^1.13.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/electron": "^1.4.38",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@types/sql.js": "^1.4.9",
     "@vitejs/plugin-react": "^5.1.0",
     "cross-env": "^10.1.0",
+    "drizzle-kit": "^0.31.8",
     "electron": "^39.2.1",
     "electron-builder": "^26.0.12",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
