--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.556.0",
     "next-themes": "^0.4.6",
+    "pdfkit": "^0.17.2",
     "react": "^19.2.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.0",
@@ -52,6 +53,7 @@
     "@eslint/js": "^9.39.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/electron": "^1.4.38",
+    "@types/pdfkit": "^0.17.4",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
