--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "samples-app",
+  "productName": "Sistema de Muestras",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "main": "dist-electron/electron/main.js",
   "scripts": {
