--- a/src/electron/tsconfig.json
+++ b/src/electron/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "ESNext",
+    "target": "ES2022",
     "module": "NodeNext",
     "outDir": "../../dist-electron",
-    "skipLibCheck": true,
-    "types": ["../../types"]
+    "types": ["../../types"],
+    "skipLibCheck": true
   }
 }
