--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
+    "electron-window-state": "^5.0.3",
     "lucide-react": "^0.556.0",
     "next-themes": "^0.4.6",
     "pdfkit": "^0.17.2",
